Corrected visualization bug on small height browser windows

--- a/_scss/_retreat.scss
+++ b/_scss/_retreat.scss
@@ -78,6 +78,7 @@
 
 .page-heading {
     height: 100vh;
+    min-height: 600px !important;
     margin-bottom: 0 !important;
     @include flexbox();
     @include flex-direction(row);
